# bazel_issues

./: BUILD  BUILD.bazel  ReadMe.md  WORKSPACE  bar.cpp  foo.cpp  link_files_aspect.bzl  platform_switch.bzl
platforms_aliases/: BUILD.bazel
